--- a/.github/workflows/myBasics.yml
+++ b/.github/workflows/myBasics.yml
@@ -1,55 +1,20 @@
-# This is a basic workflow to help you get started with Actions
 
 name: Node CI
 
-# Trigger the workflow on push or pull request
 on:
   - push
-  - pull_request
 
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+jobs: 
+  lint-my-code:
     runs-on: ubuntu-latest
     
-    
-    strategy:
-      # Node versions list
-      matrix:
-        node-version: [14.x]
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-        # Check-out repository under GitHub workspace
-        # https://github.com/actions/checkout
       - uses: actions/checkout@v2
-        # Step's name
-      - name: Use Node.js ${{ matrix.node-version }}
-        # Configures the node version used on GitHub-hosted runners
-        # https://github.com/actions/setup-node
-        uses: actions/setup-node@v1
-        # The Node.js version to configure
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: npm install
-        # Install project
-        run: |
-          make install
-        # Add environment variables
-        env:
-          CI: true
-      - name: Run linter
-        # Run Linter
-        run: |
-          make lint
-      - name: Test & publish code coverage
-        # Publish code coverage on Code Climate
-        # https://github.com/paambaati/codeclimate-action
-        uses: paambaati/codeclimate-action@v2.7.4
-        # Add Code Climate secret key
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: make test-coverage
-          debug: true
+      - uses: actions/setup-node@v1
+      - run: npm install eslint
+      - run: eslint-config-airbnb-base
+      - run: eslint-plugin-import
+      - run: make install
+      - run: make lint
+      
+    
