--- a/.github/workflows/myBasics.yml
+++ b/.github/workflows/myBasics.yml
@@ -10,7 +10,7 @@ jobs:
   build:
 
     # The type of machine to run the job on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     strategy:
       # Node versions list
