--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,32 +1,26 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Linter
 
-# Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+# Run this workflow every time a new commit pushed to your repository
+on: push
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  # Set the job key. The key is displayed as the job name
+  # when a job name is not provided
+  make-lint:
+    # Name the Job
+    name: Runs linter
+    # Set the type of machine to run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      - name: npm install
+      # Checks out a copy of your repository on the ubuntu-latest machine
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      # installing dependencies
+      - name: Install Dependencies
         run: make install
-        
-      - name: Run linter
-        run: make lint
+
+      # Runs the Linter action
+      - name: Run Linter
+        run: make lint 
